[Refactor] Fix deprecated Integer constructor usage across codebase (#61246)
Replace new Integer() with Integer.valueOf() in SchemaChangeJobV2.java (1 instance)
Replace new Integer() with Integer.valueOf() in DppUtilsTest.java (1 instance)
Replace new Integer() with Integer.valueOf() in StarRocksRangePartitionerTest.java (8 instances)
Total 10 deprecated Integer constructor calls fixed
Complements previous Long constructor fixes for complete wrapper deprecation cleanup

Signed-off-by: alvin-celerdata <alvin.zhao@celerdata.com>